// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> should render and match the snapshot for a label 1`] = `
.c0 {
  position: relative;
  bottom: -3px;
  margin: 0 10px;
  padding-bottom: 7px;
  font-weight: 400 !important;
}

.c0 div {
  cursor: pointer;
  color: undefined !important;
}

.c1 {
  position: absolute;
  bottom: -2px;
  left: 0;
  right: 0;
  height: 2px;
  background: #B727EA;
}

<div
  class="c0"
>
  <div>
    label
  </div>
  <div
    class="c1"
    data-projection-id="1"
    style="opacity: 1;"
  />
</div>
`;

exports[`<Tab /> should render as links and match the snapshot 1`] = `
.c0 {
  position: relative;
  bottom: -3px;
  margin: 0 10px;
  padding-bottom: 7px;
  font-weight: 400 !important;
}

.c0 div {
  cursor: pointer;
  color: undefined !important;
}

.c1 a {
  color: #2F3850 !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:visited,
.c1 a:hover {
  color: #2F3850;
}

.c2 {
  position: absolute;
  bottom: -2px;
  left: 0;
  right: 0;
  height: 2px;
  background: #B727EA;
}

<div
  class="c0 c1"
>
  <div>
    <a
      href="/url1"
    >
      Url1
    </a>
  </div>
  <div
    class="c2"
    data-projection-id="2"
    style="opacity: 1;"
  />
</div>
`;
